zg 23.09.2017 15:25:28 FLE Daylight Time - build 5037

1. при сохранении файла в редакторе текущей устанавливалась папка, в которой редактор был запущен.
   убрано.

drkns 21.09.2017 21:43:58 +0100 - build 5036

1. 0003499: При запуске из панели в командной строке отображается избыточный полный путь к файлу

2. Опция Use registered types" зачем-то влияла на запуск файлов без расширения из комстроки.
   Если кто-то помнит причину - пишите.

drkns 20.09.2017 21:35:37 +0100 - build 5035

1. Продолжение 5030.3.

drkns 20.09.2017 07:37:25 +0100 - build 5034

1. Уточнение 5032.

drkns 19.09.2017 23:14:44 +0100 - build 5033

1. 0003497: регэкспы перестали работать (более правильное исправление, чем 4492).

drkns 16.09.2017 23:23:44 +0100 - build 5032

1. Продолжение 5030.3.

drkns 15.09.2017 23:44:07 +0100 - build 5031

1. Продолжение 5030.3 - читаем/сохраняем только те folder shortcuts, которые надо, а не все существующие.

2. 0003492: Неправильная индикация в верхней статусной строке

drkns 15.09.2017 00:48:00 +0100 - build 5030

1. 0003490: Падение при нажатии F4 в пустом подменю

2. 0003491: Нелогичное создание подменю после отменённого редактирования

3. Folder shortcuts в целом упрощён и частично переделан.

drkns 13.09.2017 20:19:28 +0100 - build 5029

1. Откат 5027.2 и 5028.1.

drkns 12.09.2017 21:04:02 +0100 - build 5028

1. Продолжение 0003481.

drkns 11.09.2017 20:45:30 +0100 - build 5027

1. 0003481: hlf: Текст может выравниваться не смотря на отсутствие <CtrlStartPosChar>

2. CtrlStartPosChar мог внезапно влиять на предыдущий абзац.

3. Экспериментально - поддержка TrueColor в hlf. Формат ([[T]FFFFFFFF][:[T]BBBBBBBB]) - тот же, что и в промпте.

drkns 09.09.2017 22:00:37 +0100 - build 5026

1. Записываем стек и для тех исключений, которые были пойманы и переброшены через exception_ptr.

2. Рефакторинг.

drkns 09.09.2017 17:32:31 +0100 - build 5025

1. 0003485: Exception при попытке просмотра некорректного? hlf
