@@ -1,4 +1,10 @@
-zg 23.09.2017 15:25:28 FLE Daylight Time - build 5037
+drkns 24.09.2017 16:59:37 +0100 - build 5038
+
+1. 0003505: FarMenu.ini может оказаться папкой - не пытаемся в этом случае его выводить.
+
+2. Некоторые уточнения в запускателе на тему файлов без расширений и логики поиска запускаемого файла.
+
+zg 23.09.2017 15:25:28 +0300 - build 5037
 
 1. при сохранении файла в редакторе текущей устанавливалась папка, в которой редактор был запущен.
    убрано.
@@ -66,7 +72,7 @@ drkns 09.09.2017 17:32:31 +0100 - build 5025
 
 1. 0003485: Exception при попытке просмотра некорректного? hlf
 
-zg 03.09.2017 14:24:00 FLE Daylight Time - build 5024
+zg 03.09.2017 14:24:00 +0300 - build 5024
 
 1. при удалении выделения в неактивном редакторе, он перерисовывался поверх всех окон.
 
